# old-bar-pi

./: .gitignore  CMakeLists.txt  Database Design.ods  README.md  Screens.odt  appStructs.h  bpscan.cpp  bpscan.h  catalog.cpp  catalog.h  catalogue.cpp  catalogue.cpp.autosave  catalogue.h  cloudreport.py  commandlineparser.cpp  commandlineparser.h  connection.h  databasedialog.cpp  databasedialog.h  dbinit.psql  dialogues.cpp  fullcloudreport.py  inventory.cpp  inventory.cpp.autosave  inventory.h  jits.py  main.cpp  mainwindow.cpp  mainwindow.h  modifiers.py  old-bar-pi.pro  productdialog.cpp  productdialog.h  productwindow.cpp  productwindow.h  report.txt  scannerdialog.cpp  scannerdialog.h  stockmanager.cpp  stockmanager.h  (+4 more)
Toast/: Wine Product IDs.xlsx  bacchus_toastmenureport.py  toastmenureport.py
Touchbistro/: ToastFindDuplicateGiftcards.py  ToastGfConvert.py  cloudreport.py  dutil.py  fullcloudreport.py
barpi_app/: CMakeLists.txt  bpscan.cpp  bpscan.h  catalog.cpp  commandlineparser.cpp  commandlineparser.h  databasedialog.cpp  databasedialog.h  datedelegate.cpp  datedelegate.h  dialogues.h  inventorymanager.cpp  inventorymanager.h  invoicemanager.cpp  invoicemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  scannerdialog.cpp  scannerdialog.h  stockmanager.cpp  stockmanager.h
data/: 2015_06.csv  2015_07.csv  2015_08.csv  2015_09.csv  2016-07-menu.csv  2016-07-modifiers.csv  2016-11_MenuReport.csv  20160808.csv  2016w30-menu.csv  2016w30-modifiers.csv  Report.csv  TouchBistroReport.csv  january2015.txt  jits.csv  tb01.csv  tb02.csv  tb03.csv
database/: bpdata
opensource/: barcode.py  getscaleinfo.py  readscale.py
